Fix spacing in footer

--- a/_assets/_yearsite.scss
+++ b/_assets/_yearsite.scss
@@ -357,7 +357,7 @@ footer {
   h6 {
     @include header-format;
     font-size: 1rem;
-    margin: 0.1rem 0 0.6rem;
+    margin: 0.2rem 0 0.6rem;
   }
 }
 
